fix: improve section visibility and reveal animation timing

--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -9,6 +9,8 @@
     position: relative;
 
     overflow: hidden;
+
+    padding-bottom: 50px;
 }
 
 .hero__wrapper {
