--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,7 @@
 section {
     min-height: 100vh;
-    padding: 100px 0;
+    padding: 20px 0;
+    padding-top: 50px;
 }
 
 /* ================================= */
